Adding deploy to heroku instructions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Slack
+# Slack API Token
 SLACK_API_TOKEN=https://api.slack.com/bot-users
 
 ## The channel for the bot to output its daily reports in Slack.
