--- a/app.json
+++ b/app.json
@@ -6,14 +6,9 @@
   "scripts": {
   },
   "env": {
-    "LANG": {
-      "required": true
-    },
     "RACK_ENV": {
-      "required": true
-    },
-    "RAILS_LOG_TO_STDOUT": {
-      "required": true
+      "required": true,
+      "value": "production"
     },
     "SLACK_API_TOKEN": {
       "description": "Slack API Token - for your bot to talk to slack.",
